# 2-wheel-balancing-robot

./: CMakeLists.txt  README.md  driver.c  driver.h  lqr.c  lqr.h  main.c  mpu.c  mpu.h  pico_uart_transport.c  pico_uart_transports.h
GUI/: tunner.py
